CppBridge/library.h

_declspec(dllexport) void * __stdcall TL_Module_GetAddressOfGlobalVar(asIScriptModule *module, asUINT index);
_declspec(dllexport) int __stdcall TL_Module_RemoveGlobalVar(asIScriptModule *module, asUINT index);
_declspec(dllexport) asUINT __stdcall TL_Module_GetObjectTypeCount(const asIScriptModule *module);
_declspec(dllexport) asITypeInfo * __stdcall TL_Module_GetObjectTypeByIndex(const asIScriptModule *module, asUINT index);
_declspec(dllexport) int __stdcall TL_Module_GetTypeIdByDecl(const asIScriptModule *module, const char *decl);
_declspec(dllexport) asITypeInfo * __stdcall TL_Module_GetTypeInfoByName(const asIScriptModule *module, const char *name);
_declspec(dllexport) asITypeInfo * __stdcall TL_Module_GetTypeInfoByDecl(const asIScriptModule *module, const char *decl);
_declspec(dllexport) asUINT __stdcall TL_Module_GetEnumCount(const asIScriptModule *module);
_declspec(dllexport) asITypeInfo * __stdcall TL_Module_GetEnumByIndex(const asIScriptModule *module, asUINT index);
_declspec(dllexport) asUINT __stdcall TL_Module_GetTypedefCount(const asIScriptModule *module);
_declspec(dllexport) asITypeInfo * __stdcall TL_Module_GetTypedefByIndex(const asIScriptModule *module, asUINT index);
_declspec(dllexport) asUINT __stdcall TL_Module_GetImportedFunctionCount(const asIScriptModule *module);
_declspec(dllexport) int __stdcall TL_Module_GetImportedFunctionIndexByDecl(const asIScriptModule *module, const char *decl);
_declspec(dllexport) const char * __stdcall TL_Module_GetImportedFunctionDeclaration(const asIScriptModule *module, asUINT importIndex);
_declspec(dllexport) const char * __stdcall TL_Module_GetImportedFunctionSourceModule(const asIScriptModule *module, asUINT importIndex);
_declspec(dllexport) int __stdcall TL_Module_BindImportedFunction(asIScriptModule *module, asUINT importIndex, asIScriptFunction *func);
_declspec(dllexport) int __stdcall TL_Module_UnbindImportedFunction(asIScriptModule *module, asUINT importIndex);
_declspec(dllexport) int __stdcall TL_Module_BindAllImportedFunctions(asIScriptModule *module);
_declspec(dllexport) int __stdcall TL_Module_UnbindAllImportedFunctions(asIScriptModule *module);
_declspec(dllexport) int __stdcall TL_Module_SaveByteCode(const asIScriptModule *module, asIBinaryStream *out, bool stripDebugInfo);
_declspec(dllexport) int __stdcall TL_Module_LoadByteCode(asIScriptModule *module, asIBinaryStream *in, bool *wasDebugInfoStripped);
_declspec(dllexport) void * __stdcall TL_Module_SetUserData(asIScriptModule *module, void *data, asPWORD type);
_declspec(dllexport) void * __stdcall TL_Module_GetUserData(const asIScriptModule *module, asPWORD type);
_declspec(dllexport) int __stdcall TL_Context_AddRef(const asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_Release(const asIScriptContext *context);
_declspec(dllexport) asIScriptEngine * __stdcall TL_Context_GetEngine(const asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_Prepare(asIScriptContext *context, asIScriptFunction *func);
_declspec(dllexport) int __stdcall TL_Context_Unprepare(asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_Execute(asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_Abort(asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_Suspend(asIScriptContext *context);
_declspec(dllexport) asEContextState __stdcall TL_Context_GetState(const asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_PushState(asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_PopState(asIScriptContext *context);
_declspec(dllexport) bool __stdcall TL_Context_IsNested(const asIScriptContext *context, asUINT *nestCount);
_declspec(dllexport) int __stdcall TL_Context_SetObject(asIScriptContext *context, void *obj);
_declspec(dllexport) int __stdcall TL_Context_SetArgByte(asIScriptContext *context, asUINT arg, asBYTE value);
_declspec(dllexport) int __stdcall TL_Context_SetArgWord(asIScriptContext *context, asUINT arg, asWORD value);
_declspec(dllexport) int __stdcall TL_Context_SetArgDWord(asIScriptContext *context, asUINT arg, asDWORD value);
_declspec(dllexport) int __stdcall TL_Context_SetArgQWord(asIScriptContext *context, asUINT arg, asQWORD value);
_declspec(dllexport) int __stdcall TL_Context_SetArgFloat(asIScriptContext *context, asUINT arg, float value);
_declspec(dllexport) int __stdcall TL_Context_SetArgDouble(asIScriptContext *context, asUINT arg, double value);
_declspec(dllexport) int __stdcall TL_Context_SetArgAddress(asIScriptContext *context, asUINT arg, void *addr);
_declspec(dllexport) int __stdcall TL_Context_SetArgObject(asIScriptContext *context, asUINT arg, void *obj);
_declspec(dllexport) int __stdcall TL_Context_SetArgVarType(asIScriptContext *context, asUINT arg, void *ptr, int typeId);
_declspec(dllexport) void * __stdcall TL_Context_GetAddressOfArg(asIScriptContext *context, asUINT arg);
_declspec(dllexport) asBYTE __stdcall TL_Context_GetReturnByte(asIScriptContext *context);
_declspec(dllexport) asWORD __stdcall TL_Context_GetReturnWord(asIScriptContext *context);
_declspec(dllexport) asDWORD __stdcall TL_Context_GetReturnDWord(asIScriptContext *context);
_declspec(dllexport) asQWORD __stdcall TL_Context_GetReturnQWord(asIScriptContext *context);
_declspec(dllexport) float __stdcall TL_Context_GetReturnFloat(asIScriptContext *context);
_declspec(dllexport) double __stdcall TL_Context_GetReturnDouble(asIScriptContext *context);
_declspec(dllexport) void * __stdcall TL_Context_GetReturnAddress(asIScriptContext *context);
_declspec(dllexport) void * __stdcall TL_Context_GetReturnObject(asIScriptContext *context);
_declspec(dllexport) void * __stdcall TL_Context_GetAddressOfReturnValue(asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_SetException(asIScriptContext *context, const char *info, bool allowCatch);
_declspec(dllexport) int __stdcall TL_Context_GetExceptionLineNumber(asIScriptContext *context, int *column, const char **sectionName);
_declspec(dllexport) asIScriptFunction * __stdcall TL_Context_GetExceptionFunction(asIScriptContext *context);
_declspec(dllexport) const char * __stdcall TL_Context_GetExceptionString(asIScriptContext *context);
_declspec(dllexport) bool __stdcall TL_Context_WillExceptionBeCaught(asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_SetExceptionCallback(asIScriptContext *context, const asSFuncPtr *callback, void *obj,
                                              int callConv);
_declspec(dllexport) void __stdcall TL_Context_ClearExceptionCallback(asIScriptContext *context);
_declspec(dllexport) int __stdcall TL_Context_SetLineCallback(asIScriptContext *context, const asSFuncPtr *callback, void *obj,
                                         int callConv);