CsharpLoader/ACL/Private/NativeBindings.cs


    [LibraryImport(DllName, EntryPoint = "TL_Module_GetAddressOfGlobalVar")]
    internal static partial IntPtr TL_Module_GetAddressOfGlobalVar(IntPtr module, uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Module_RemoveGlobalVar")]
    internal static partial int TL_Module_RemoveGlobalVar(IntPtr module, uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetObjectTypeCount")]
    internal static partial uint TL_Module_GetObjectTypeCount(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetObjectTypeByIndex")]
    internal static partial IntPtr TL_Module_GetObjectTypeByIndex(IntPtr module, uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetTypeIdByDecl")]
    internal static partial int TL_Module_GetTypeIdByDecl(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetTypeInfoByName")]
    internal static partial IntPtr TL_Module_GetTypeInfoByName(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetTypeInfoByDecl")]
    internal static partial IntPtr TL_Module_GetTypeInfoByDecl(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetEnumCount")]
    internal static partial uint TL_Module_GetEnumCount(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetEnumByIndex")]
    internal static partial IntPtr TL_Module_GetEnumByIndex(IntPtr module, uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetTypedefCount")]
    internal static partial uint TL_Module_GetTypedefCount(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetTypedefByIndex")]
    internal static partial IntPtr TL_Module_GetTypedefByIndex(IntPtr module, uint index);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetImportedFunctionCount")]
    internal static partial uint TL_Module_GetImportedFunctionCount(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetImportedFunctionIndexByDecl")]
    internal static partial int TL_Module_GetImportedFunctionIndexByDecl(
        IntPtr module,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string decl);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetImportedFunctionDeclaration")]
    internal static partial IntPtr TL_Module_GetImportedFunctionDeclaration(IntPtr module, uint importIndex);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetImportedFunctionSourceModule")]
    internal static partial IntPtr TL_Module_GetImportedFunctionSourceModule(IntPtr module, uint importIndex);

    [LibraryImport(DllName, EntryPoint = "TL_Module_BindImportedFunction")]
    internal static partial int TL_Module_BindImportedFunction(
        IntPtr module,
        uint importIndex,
        IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Module_UnbindImportedFunction")]
    internal static partial int TL_Module_UnbindImportedFunction(IntPtr module, uint importIndex);

    [LibraryImport(DllName, EntryPoint = "TL_Module_BindAllImportedFunctions")]
    internal static partial int TL_Module_BindAllImportedFunctions(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_UnbindAllImportedFunctions")]
    internal static partial int TL_Module_UnbindAllImportedFunctions(IntPtr module);

    [LibraryImport(DllName, EntryPoint = "TL_Module_SaveByteCode")]
    internal static partial int TL_Module_SaveByteCode(
        IntPtr module,
        IntPtr outStream,
        [MarshalAs(UnmanagedType.Bool)] bool stripDebugInfo);

    [LibraryImport(DllName, EntryPoint = "TL_Module_LoadByteCode")]
    internal static partial int TL_Module_LoadByteCode(
        IntPtr module,
        IntPtr inStream,
        IntPtr wasDebugInfoStripped);

    [LibraryImport(DllName, EntryPoint = "TL_Module_SetUserData")]
    internal static partial IntPtr TL_Module_SetUserData(IntPtr module, IntPtr data, uint type);

    [LibraryImport(DllName, EntryPoint = "TL_Module_GetUserData")]
    internal static partial IntPtr TL_Module_GetUserData(IntPtr module, uint type);

    #endregion

    #region Context Functions

    [LibraryImport(DllName, EntryPoint = "TL_Context_AddRef")]
    internal static partial int TL_Context_AddRef(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_Release")]
    internal static partial int TL_Context_Release(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetEngine")]
    internal static partial IntPtr TL_Context_GetEngine(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_Prepare")]
    internal static partial int TL_Context_Prepare(IntPtr context, IntPtr func);

    [LibraryImport(DllName, EntryPoint = "TL_Context_Unprepare")]
    internal static partial int TL_Context_Unprepare(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_Execute")]
    internal static partial int TL_Context_Execute(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_Abort")]
    internal static partial int TL_Context_Abort(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_Suspend")]
    internal static partial int TL_Context_Suspend(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetState")]
    internal static partial int TL_Context_GetState(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_PushState")]
    internal static partial int TL_Context_PushState(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_PopState")]
    internal static partial int TL_Context_PopState(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_IsNested")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Context_IsNested(IntPtr context, IntPtr nestCount);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetObject")]
    internal static partial int TL_Context_SetObject(IntPtr context, IntPtr obj);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgByte")]
    internal static partial int TL_Context_SetArgByte(IntPtr context, uint arg, byte value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgWord")]
    internal static partial int TL_Context_SetArgWord(IntPtr context, uint arg, ushort value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgDWord")]
    internal static partial int TL_Context_SetArgDWord(IntPtr context, uint arg, uint value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgQWord")]
    internal static partial int TL_Context_SetArgQWord(IntPtr context, uint arg, ulong value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgFloat")]
    internal static partial int TL_Context_SetArgFloat(IntPtr context, uint arg, float value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgDouble")]
    internal static partial int TL_Context_SetArgDouble(IntPtr context, uint arg, double value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgAddress")]
    internal static partial int TL_Context_SetArgAddress(IntPtr context, uint arg, IntPtr addr);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgAddress")]
    internal static partial int TL_Context_SetArgAddress(IntPtr context, uint arg, out byte value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgAddress")]
    internal static partial int TL_Context_SetArgAddress(IntPtr context, uint arg, out ushort value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgAddress")]
    internal static partial int TL_Context_SetArgAddress(IntPtr context, uint arg, out uint value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgAddress")]
    internal static partial int TL_Context_SetArgAddress(IntPtr context, uint arg, out ulong value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgAddress")]
    internal static partial int TL_Context_SetArgAddress(IntPtr context, uint arg, out float value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgAddress")]
    internal static partial int TL_Context_SetArgAddress(IntPtr context, uint arg, out double value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgAddress")]
    internal static partial int TL_Context_SetArgAddress(IntPtr context, uint arg, out IntPtr value);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgObject")]
    internal static partial int TL_Context_SetArgObject(IntPtr context, uint arg, IntPtr obj);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetArgVarType")]
    internal static partial int TL_Context_SetArgVarType(
        IntPtr context,
        uint arg,
        IntPtr ptr,
        int typeId);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetAddressOfArg")]
    internal static partial IntPtr TL_Context_GetAddressOfArg(IntPtr context, uint arg);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetReturnByte")]
    internal static partial byte TL_Context_GetReturnByte(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetReturnWord")]
    internal static partial ushort TL_Context_GetReturnWord(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetReturnDWord")]
    internal static partial uint TL_Context_GetReturnDWord(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetReturnQWord")]
    internal static partial ulong TL_Context_GetReturnQWord(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetReturnFloat")]
    internal static partial float TL_Context_GetReturnFloat(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetReturnDouble")]
    internal static partial double TL_Context_GetReturnDouble(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetReturnAddress")]
    internal static partial IntPtr TL_Context_GetReturnAddress(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetReturnObject")]
    internal static partial IntPtr TL_Context_GetReturnObject(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetAddressOfReturnValue")]
    internal static partial IntPtr TL_Context_GetAddressOfReturnValue(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetException")]
    internal static partial int TL_Context_SetException(
        IntPtr context,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string info,
        [MarshalAs(UnmanagedType.Bool)] bool allowCatch);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetExceptionLineNumber")]
    internal static partial int TL_Context_GetExceptionLineNumber(
        IntPtr context,
        IntPtr column,
        IntPtr sectionName);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetExceptionFunction")]
    internal static partial IntPtr TL_Context_GetExceptionFunction(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_GetExceptionString")]
    internal static partial IntPtr TL_Context_GetExceptionString(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_WillExceptionBeCaught")]
    [return: MarshalAs(UnmanagedType.Bool)]
    internal static partial bool TL_Context_WillExceptionBeCaught(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetExceptionCallback")]
    internal static partial int TL_Context_SetExceptionCallback(
        IntPtr context,
        IntPtr callback,
        IntPtr obj,
        int callConv);

    [LibraryImport(DllName, EntryPoint = "TL_Context_ClearExceptionCallback")]
    internal static partial void TL_Context_ClearExceptionCallback(IntPtr context);

    [LibraryImport(DllName, EntryPoint = "TL_Context_SetLineCallback")]
    internal static partial int TL_Context_SetLineCallback(
        IntPtr context,
        IntPtr callback,
        IntPtr obj,
        int callConv);
